@@ -6,6 +6,10 @@
 make
 PACKAGE=`grep '^PACKAGE = ' Makefile | sed 's/^PACKAGE = //'`
 [ z"$PACKAGE" = 'z' ] && exit 1
+VERSION=`grep '^VERSION = ' Makefile | sed 's/^VERSION = *//'`
+[ z"$VERSION" = 'z' ] && exit 1
+# LocaleData are also generated through Makefile.docstr.  Here we want
+# them to be generated by the Makefile in po*/ to test that it works.
 rm -rf LocaleData
 
 for dir in po po_document; do
@@ -27,3 +31,10 @@ for dir in po po_document; do
 done
 
 find LocaleData po_document po t/include_dir -type f | sort > maintain/MANIFEST_generated_files
+make MANIFEST
+./maintain/change_perl_modules_version.sh $VERSION
+cp -p ../COPYING .
+sed 's/\(my \$hardcoded_version = \).*/\1 undef;/' texi2any.pl > texi2any
+chmod a+x texi2any
+touch -r texi2any.pl texi2any
+
